k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dpipot
  labels:
    app.kubernetes.io/name: dpipot
