k8s/base/logstash.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: dpipot
spec:
  selector:
    app: logstash
  ports:
    - name: beats
      port: 5044
      targetPort: 5044
    - name: http
      port: 9600
      targetPort: 9600
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: dpipot
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.12.0
          ports:
            - containerPort: 5044
              protocol: TCP
            - containerPort: 9600
              protocol: TCP
          volumeMounts:
            - name: logstash-config
              mountPath: /usr/share/logstash/config
              readOnly: true
            - name: logstash-pipeline
              mountPath: /usr/share/logstash/pipeline
            - name: elastic-certs
              mountPath: /usr/share/logstash/config/certs
              readOnly: true
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: logstash-config
          configMap:
            name: logstash-config
            items:
              - key: logstash.yml
                path: logstash.yml
              - key: pipelines.yml
                path: pipelines.yml
        - name: logstash-pipeline
          configMap:
            name: logstash-config
            items:
              - key: kafka-to-elasticsearch.conf
                path: kafka-to-elasticsearch.conf
              - key: kubernetes-logs.conf
                path: kubernetes-logs.conf
        - name: elastic-certs
          secret:
            secretName: elastic-certs
