k8s/base/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb-test
  ports:
  - port: 3306
    targetPort: 3306
